# Rpi-USB-Cloner

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CIRCULAR_IMPORT_ISSUE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  LOGGING_IMPROVEMENTS.md  MANIFEST.in  README.md  RELEASING.md  TESTING.md  TEST_COVERAGE_ANALYSIS.md  TODO.md  clone_ops.py  commands.py  devices.py  erase_ops.py  gpio.py  mount.py  operations.py  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements.txt  rpi-usb-cloner.py  setup.py  test_logging_demo.py  ui.py  verify_ops.py
.github/: CI-CD-GUIDE.md  CONTRIBUTING.md  COVERAGE-GUIDE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: README.md  ci.yml  code-quality.yml  labeler.yml  release.yml  tests.yml  welcome.yml
docs/: BLUETOOTH_PAN.md  CHANGELOG.md  COMMON_TASKS.md  LOGGING_IMPROVEMENTS.md  TESTING.md  TEST_COVERAGE_ANALYSIS.md  UI_STYLE_GUIDE.md
rpi_usb_cloner/: __init__.py  __version__.py  logging.py  main.py
rpi_usb_cloner/actions/: __init__.py  bluetooth_actions.py  drive_actions.py  image_actions.py  network_transfer_actions.py  settings_actions.py  tools_actions.py  transfer_actions.py  wifi_direct_actions.py
rpi_usb_cloner/actions/drives/: __init__.py  _utils.py  clone_actions.py  erase_actions.py  format_actions.py  info_actions.py  repo_actions.py  unmount_actions.py
rpi_usb_cloner/actions/settings/: __init__.py  system_power.py  system_utils.py  ui_actions.py  update_manager.py
rpi_usb_cloner/app/: context.py  drive_info.py  menu_builders.py  state.py  wifi_label.py
rpi_usb_cloner/config/: __init__.py  settings.py
rpi_usb_cloner/domain/: __init__.py  models.py
rpi_usb_cloner/hardware/: gpio.py  virtual_gpio.py
rpi_usb_cloner/menu/: __init__.py  actions.py  definitions.py  model.py  navigator.py
rpi_usb_cloner/menu/actions/: __init__.py  bluetooth.py  drives.py  images.py  settings.py  tools.py  transfer.py
rpi_usb_cloner/menu/definitions/: __init__.py  bluetooth.py  clone.py  drives.py  images.py  main.py  settings.py  tools.py
rpi_usb_cloner/services/: __init__.py  bluetooth.py  discovery.py  drives.py  peer_transfer_client.py  peer_transfer_server.py  transfer.py  wifi.py  wifi_direct.py
rpi_usb_cloner/storage/: clone.py  clonezilla.py  device_lock.py  devices.py  exceptions.py  format.py  image_repo.py  iso.py  mount.py  validation.py
rpi_usb_cloner/storage/clone/: __init__.py  command_runners.py  erase.py  models.py  operations.py  progress.py  verification.py
rpi_usb_cloner/storage/clonezilla/: __init__.py  backup.py  compression.py  file_utils.py  image_discovery.py  models.py  partition_table.py  restore.py  verification.py
rpi_usb_cloner/storage/imageusb/: __init__.py  detection.py  restore.py
rpi_usb_cloner/ui/: animated_icon.py  animated_icons.py  constants.py  display.py  header.py  icons.py  keyboard.py  menus.py  renderer.py  screens.py  screensaver.py  status_bar.py  toggle.py  transitions.py
rpi_usb_cloner/ui/assets/fonts/: 6px-licence.txt
rpi_usb_cloner/ui/screens/: __init__.py  confirmation.py  demos.py  error.py  file_browser.py  info.py  logs.py  progress.py  qr_code.py  status.py  wifi.py
rpi_usb_cloner/web/: __init__.py  server.py  system_health.py
rpi_usb_cloner/web/static/apexcharts/: apexcharts.min.js
rpi_usb_cloner/web/static/js/: app.js  config.js  devices.js  health.js  logs.js  screen.js  theme.js  websocket.js
rpi_usb_cloner/web/static/tabler/: LICENSE.txt  tabler.min.css
rpi_usb_cloner/web/templates/: index.html
scripts/: install-bluetooth.sh
src/rpi_usb_cloner/: __init__.py  config.py  main.py
src/rpi_usb_cloner/services/: __init__.py  cloning.py  progress.py
src/rpi_usb_cloner/ui/: __init__.py  menu.py  screens.py
tests/: CIRCULAR_IMPORT_FIX.md  NEW_TESTS_README.md  __init__.py  conftest.py  test_actions_drive.py  test_actions_image.py  test_actions_import.py  test_actions_settings.py  test_app_context.py  test_app_drive_info.py  test_app_menu_builders.py  test_bluetooth.py  test_bluetooth_qr_screen.py  test_clone.py  test_clone_models.py  test_clone_operations.py  test_clone_progress.py  test_clone_safety.py  test_clonezilla_backup.py  test_clonezilla_file_utils.py  test_clonezilla_image_discovery.py  test_clonezilla_models.py  test_clonezilla_partition_table.py  test_clonezilla_restore.py  test_clonezilla_verification.py  test_clonezilla_verification_extra.py  test_command_runners.py  test_devices.py  test_discovery.py  test_domain_models.py  test_drive_actions.py  test_drive_utils_extra.py  test_erase.py  test_erase_extended.py  test_exceptions.py  test_format.py  test_image_actions.py  test_image_repo.py  test_image_repo_extra.py  test_image_repo_more.py  (+48 more)
